--- a/src/Bioinformatics-hw1-contigs-and-scaffolds.ipynb
+++ b/src/Bioinformatics-hw1-contigs-and-scaffolds.ipynb
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,11 +106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def analyse_scaffolds(filename):\n",
+    "def analyse_scaffolds(filename, getlongest=False):\n",
     "    scaf_file = open(filename, \"r\")\n",
     "    scaf = []\n",
     "    names = []\n",
@@ -143,6 +143,13 @@
     "    maxind = scaf_len.index(max(scaf_len))\n",
     "    gapLen = scaf[maxind].count('N')\n",
     "\n",
+    "    if (getlongest):\n",
+    "        f_w = open(\"longest.fasta\", \"w\")\n",
+    "        f_w.write(names[maxind])\n",
+    "        f_w.write(\"\\n\")\n",
+    "        f_w.write(scaf[maxind])\n",
+    "        f_w.close()\n",
+    "    \n",
     "    cntGap = 0\n",
     "    flag = 0\n",
     "    for c in scaf[maxind]:\n",
@@ -160,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -212,7 +219,7 @@
     }
    ],
    "source": [
-    "res = analyse_scaffolds(\"out_gapClosed.fa\")\n",
+    "res = analyse_scaffolds(\"out_gapClosed.fa\", True)\n",
     "print(\"Кол-во скаффолдов:\", res[0])\n",
     "print(\"Длина самого большого скаффолда:\", res[1])\n",
     "print(\"Суммарная длина скаффолдов:\", res[2])\n",
